--- a/css/styles.css
+++ b/css/styles.css
@@ -20,7 +20,7 @@ body {
   display: -ms-flexbox;
   display: flex;
   background-color: #432818;
-  border-bottom: solid 1px white;
+  border-bottom: solid 1px #ffe6a7;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
@@ -60,7 +60,7 @@ body {
   -webkit-transition: 0.3s ease;
   transition: 0.3s ease;
   padding: 1rem;
-  color: white;
+  color: #fff;
 }
 
 .nav ul li:hover,
@@ -93,14 +93,15 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  color: white;
+  color: #fff;
   text-decoration: none;
   padding: 1rem;
   border: solid 0.03rem #432818;
 }
 
 .serviceoptions a:hover {
-  background-color: #bb9457;
+  background-color: #ffe6a7;
+  color: #6f1d1b;
 }
 
 @-webkit-keyframes fadein {
@@ -119,5 +120,130 @@ body {
   100% {
     opacity: 1;
   }
+}
+
+.article_container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.article {
+  position: relative;
+  background-color: #ffe6a7;
+  padding: 1rem;
+  margin: 3rem;
+  text-align: center;
+  color: #432818;
+  border: solid 5px #432818;
+  min-width: 300px;
+  font-family: "Roboto Condensed", sans-serif;
+}
+
+.article h1 {
+  font-family: "Lobster", cursive;
+}
+
+.article img {
+  margin: 2rem 0;
+  border: solid 5px #432818;
+}
+
+.article button {
+  position: relative;
+  font-family: "Lobster", cursive;
+  border: none;
+  padding: 1rem;
+  margin-top: 3rem;
+  color: #fff;
+  background-color: #432818;
+  font-size: 1.25rem;
+  border-radius: 5%;
+}
+
+.article button:focus {
+  outline: none;
+}
+
+.article button:active {
+  background-color: #6f1d1b;
+}
+
+.main_wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.main_text {
+  text-align: center;
+  color: #fff;
+  font-size: 1rem;
+  width: 80%;
+}
+
+.main_text h1 {
+  margin: 2rem;
+  border-left: solid #ffe6a7 2px;
+}
+
+.main_text p {
+  text-align: left;
+  margin: 1rem;
+  font-family: "Roboto Condensed", sans-serif;
+}
+
+.main_contact {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  background-color: #ffe6a7;
+  color: #432818;
+  text-align: center;
+  padding: 2rem;
+  width: 20%;
+}
+
+.main_contact-header {
+  margin-bottom: 1rem;
+}
+
+.main_contact-info {
+  margin: 1rem 0;
+}
+
+.main_contact-info p {
+  margin: 1rem;
+}
+
+.main_contact-socials {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  margin: 1rem 0;
+}
+
+.main_contact-socials ul {
+  list-style-type: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  margin: 1rem 0;
+  font-size: 2rem;
+}
+
+.main_contact-socials li:hover {
+  color: #6f1d1b;
 }
 /*# sourceMappingURL=styles.css.map */
