--- a/css/styles.scss
+++ b/css/styles.scss
@@ -11,18 +11,23 @@ body {
   font-family: "Lobster", cursive;
   font-size: 1.2rem;
 }
+
+// HEADER //
+
 .header {
   position: relative;
   display: flex;
   background-color: #432818;
-  border-bottom: solid 1px white;
+  border-bottom: solid 1px #ffe6a7;
   justify-content: space-between;
   width: auto;
 }
+
 .logo_container {
   margin: 0 0 0 2rem;
   animation: fadein ease 3s;
 }
+
 .nav {
   display: flex;
   position: relative;
@@ -32,16 +37,19 @@ body {
   margin: 0 2rem 0 0;
   animation: fadein ease 3s;
 }
+
 .nav ul {
   display: flex;
   list-style-type: none;
 }
+
 .nav ul li,
 .nav ul p {
   transition: 0.3s ease;
   padding: 1rem;
-  color: white;
+  color: #fff;
 }
+
 .nav ul li:hover,
 .nav ul p:hover {
   color: gray;
@@ -51,25 +59,30 @@ body {
   display: inline-block;
   animation: fadein ease 0.7s;
 }
+
 .servicesddl i {
   margin: 0 0 0 0.7rem;
 }
+
 .serviceoptions {
   position: absolute;
   background-color: #99582a;
   display: none;
 }
+
 .serviceoptions a {
   display: inline-block;
   display: flex;
   flex-direction: column;
-  color: white;
+  color: #fff;
   text-decoration: none;
   padding: 1rem;
   border: solid 0.03rem #432818;
 }
+
 .serviceoptions a:hover {
-  background-color: #bb9457;
+  background-color: #ffe6a7;
+  color: #6f1d1b;
 }
 
 @keyframes fadein {
@@ -79,4 +92,112 @@ body {
   100% {
     opacity: 1;
   }
+}
+
+// MAIN ARTICLES //
+
+.article_container {
+  display: flex;
+}
+
+.article {
+  position: relative;
+  background-color: #ffe6a7;
+  padding: 1rem;
+  margin: 3rem;
+  text-align: center;
+  color: #432818;
+  border: solid 5px #432818;
+  min-width: 300px;
+  font-family: "Roboto Condensed", sans-serif;
+}
+
+.article h1 {
+  font-family: "Lobster", cursive;
+}
+
+.article img {
+  margin: 2rem 0;
+  border: solid 5px #432818;
+}
+
+.article button {
+  position: relative;
+  font-family: "Lobster", cursive;
+  border: none;
+  padding: 1rem;
+  margin-top: 3rem;
+  color: #fff;
+  background-color: #432818;
+  font-size: 1.25rem;
+  border-radius: 5%;
+}
+.article button:focus {
+  outline: none;
+}
+.article button:active {
+  background-color: #6f1d1b;
+}
+
+// MAIN TEXT + CONTACT //
+.main_wrapper {
+  display: flex;
+}
+
+.main_text {
+  text-align: center;
+  color: #fff;
+  font-size: 1rem;
+  width: 80%;
+}
+
+.main_text h1 {
+  margin: 2rem;
+  border-left: solid #ffe6a7 2px;
+}
+
+.main_text p {
+  text-align: left;
+  margin: 1rem;
+  font-family: "Roboto Condensed", sans-serif;
+}
+
+.main_contact {
+  display: flex;
+  flex-direction: column;
+  background-color: #ffe6a7;
+  color: #432818;
+  text-align: center;
+  padding: 2rem;
+  width: 20%;
+}
+
+.main_contact-header {
+  margin-bottom: 1rem;
+}
+
+.main_contact-info {
+  margin: 1rem 0;
+}
+
+.main_contact-info p {
+  margin: 1rem;
+}
+
+.main_contact-socials {
+  display: flex;
+  flex-direction: column;
+  margin: 1rem 0;
+}
+
+.main_contact-socials ul {
+  list-style-type: none;
+  display: flex;
+  justify-content: space-evenly;
+  margin: 1rem 0;
+  font-size: 2rem;
+}
+
+.main_contact-socials li:hover {
+  color: #6f1d1b;
 }
