--- a/css/styles.scss
+++ b/css/styles.scss
@@ -94,6 +94,58 @@ body {
   }
 }
 
+@media screen and (max-width: 800px) {
+  .nav {
+    display: grid;
+    grid-template-columns: auto;
+    opacity: 1;
+    position: absolute;
+    width: 100%;
+    top: -1000px;
+    transition: 0.5s ease;
+  }
+  .nav.active {
+    transition: 0.5 ease;
+    top: 0;
+  }
+  .nav ul {
+    display: grid;
+    text-align: center;
+    box-sizing: border-box;
+    z-index: 10;
+    background-color: black;
+  }
+  .nav ul li {
+    margin: 1rem;
+  }
+  .mobilenav {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    top: 15%;
+    right: 5%;
+    z-index: 11;
+  }
+  .mobilenav.active .bars:first-child {
+    transform: translateY(12px) rotate(45deg);
+  }
+  .mobilenav.active .bars:nth-child(2) {
+    display: none;
+  }
+  .mobilenav.active .bars:last-child {
+    transform: translateY(0) rotate(-45deg);
+  }
+  .bars {
+    display: flex;
+    background-color: #fff;
+    position: relative;
+    width: 40px;
+    height: 5px;
+    margin: 4px;
+    transition: 0.5s ease-in;
+  }
+}
+
 // POP UP //
 .popup {
   display: flex;
@@ -238,6 +290,11 @@ body {
   background-color: #6f1d1b;
 }
 
+@media screen and (max-width: 800px) {
+  .article_container {
+    flex-direction: column;
+  }
+}
 // MAIN TEXT + CONTACT //
 .main_wrapper {
   display: flex;
@@ -303,6 +360,19 @@ body {
   color: #6f1d1b;
 }
 
+@media screen and (max-width: 800px) {
+  .main_wrapper {
+    flex-direction: column;
+  }
+  .main_contact {
+    flex-direction: row;
+    width: 100%;
+    align-items: center;
+  }
+  .main_contact-socials ul {
+    flex-direction: column;
+  }
+}
 // FOOTER //
 .footer_container {
   display: flex;
